API通信時のエラーハンドリングと状態を追加

--- a/like_buttons/vanilla/vanilla_button.html
+++ b/like_buttons/vanilla/vanilla_button.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <h1>いいねボタン</h1>
-    <button id="like-button" data-liked-count="1">👍+1</button>
+    <button
+      id="like-button"
+      data-liked-count="1"
+      data-pending="false"
+      data-failed="false"
+    >
+      👍+1
+    </button>
   </body>
 </html>
