--- a/like_buttons/jQuery/like_button.html
+++ b/like_buttons/jQuery/like_button.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="like_button.js" defer></script>
-    <title>Vanilla JavaScript Button</title>
+    <title>jQuery Like Button</title>
   </head>
   <body>
-    <h1>いいねボタン</h1>
+    <h1>jQuery いいねボタン</h1>
     <button
       id="like-button"
       data-liked-count="0"
