--- a/like_buttons/react/like_button.html
+++ b/like_buttons/react/like_button.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React いいねボタン</title>
     <script
-      src="https://unpkg.com/react@17/umd/react.development.js"
       crossorigin
+      src="https://unpkg.com/react@18/umd/react.production.min.js"
     ></script>
     <script
-      src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"
       crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"
     ></script>
-    <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script type="text/babel" src="like_button.js" defer></script>
   </head>
   <body>
